--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-icons": "^3.2.2",
+    "react-loading": "^2.0.3",
+    "react-modal": "^3.8.1",
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.2",
     "redux": "^4.0.1"
