--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-modal": "^3.8.1",
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.2",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
